Implemented calculate pop_up

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".CalculateActivity"
+            android:theme="@style/AppTheme.Custom">
+
+        </activity>
+
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".SplashScreenActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.Fullscreen">
