--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,27 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    //Added By Ehma, New Dependencies
+    // ViewModel and LiveData
+    def lifecycle_version = "2.1.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
+    //Room
+    def room_version = "2.1.0" // 2.1.0 for latest stable version
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
+
+    //Rx Java & Rx Android
+    //implementation "io.reactivex.rxjava3:rxjava:3.0.0-RC1"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+
+
 }
